# lingolessons

./: .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix
.github/workflows/: android.yml  django.yml  ios.yml  rust.yml  server.xml
.zed/: settings.json
client/: .envrc  .gitignore  ARCHITECTURE.md  README.md  build.gradle.kts  default.nix  flake.nix  flake.urgh  gradle.properties  nohup.out  run.sh  settings.gradle.kts
client/android/: .editorconfig  .envrc  DEVELOPING.md  build.gradle.kts  default.nix  devenv.nix  gradle.properties  settings.gradle.kts
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/gradle/: libs.versions.toml
client/android/gradle/wrapper/: gradle-wrapper.properties
client/apple/App/App/: App.swift  AppApp.swift  AppDelegate.swift  ContentView.swift  shared.swift
client/apple/App/App/Common/: common.swift
client/apple/App/App/Domain/: DomainState.swift
client/apple/App/App/UI/: BaseViewModel.swift  Common.swift  ContentView.swift  Router.swift
client/apple/App/AppTests/: AppTests.swift
client/apple/App/AppUITests/: AppUITests.swift  AppUITestsLaunchTests.swift
client/apple/App/LingoLessons.xcodeproj/: project.pbxproj
client/composeApp/: build.gradle.kts  composeApp.podspec
client/composeApp/src/androidMain/: AndroidManifest.xml
client/composeApp/src/androidMain/kotlin/: DriverFactory.android.kt  Platform.android.kt
client/composeApp/src/commonMain/kotlin/: App.kt  DriverFactory.kt  Platform.kt
client/composeApp/src/desktopMain/kotlin/: DriverFactory.jvm.kt  Platform.jvm.kt  main.kt
client/gradle/: libs.versions.toml
client/iosApp/: Podfile
client/iosApp/Configuration/: Config.xcconfig
client/iosApp/iosApp/: iOSApp.swift
client/iosApp/iosApp.xcodeproj/: project.pbxproj
client/linux/: Cargo.toml  README.md  build.rs  icons.toml
client/linux/libs/: libLerc.so.4  libX11.so.6  libXau.so.6  libXcursor.so.1  libXdamage.so.1  libXext.so.6  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libXrender.so.1  libadwaita-1.so.0  libappstream.so.5  libblkid.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbz2.so.1  libcairo-gobject.so.2  libcairo-script-interpreter.so.2  libcairo.so.2  libcap.so.2  libcrypto.so.3  libcurl.so.4  libdatrie.so.1  libdbus-1.so.3  libepoxy.so.0  libffi.so.8  libfontconfig.so.1  libfreetype.so.6  libfribidi.so.0  libgdk_pixbuf-2.0.so.0  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgraphene-1.0.so.0  libgraphite2.so.3  libgssapi_krb5.so.2  libgtk-4.so.1  libharfbuzz.so.0  (+42 more)
client/linux/src/: common.rs  gresources.xml  main.rs
client/linux/src/blueprints/: login.blp
client/linux/src/ui/: app.rs  auth.rs  mod.rs  profile.rs  tray.rs
client/nativeApp/: build.gradle.kts
client/nativeApp/src/nativeInterop/: generate_gtk4_def.sh
client/nix/: android.nix  rust.nix
client/rust/: Cargo.toml  README.md  clippy.sh  devenv.nix  make_android.sh  make_apple.sh  make_ios.sh  rust-toolchain.toml  rustfmt.toml  test.sh
client/rust/shared/: Cargo.toml  uniffi.toml
client/rust/shared/src/: data.rs  domain.rs  lib.rs
client/rust/shared/src/common/: mod.rs  test.rs  time.rs
client/rust/shared/src/data/: api.rs  api_mocks.rs  db.rs
client/rust/shared/src/data/auth/: api.rs  api_mocks.rs  db.rs  manager.rs  mod.rs  session.rs
client/rust/shared/src/data/db/migrations/01-init/: up.sql
client/rust/shared/src/data/db/migrations/02-lessons/: up.sql
client/rust/shared/src/data/db/migrations/03-settings-numbers/: up.sql
client/rust/shared/src/data/db/migrations/04-facts/: up.sql
client/rust/shared/src/data/facts/: api.rs  api_mocks.rs  db.rs  db_fixtures.rs  repository.rs
client/rust/shared/src/data/lessons/: api.rs  api_mocks.rs  db.rs  db_fixtures.rs  mod.rs  repository.rs
client/rust/shared/src/data/settings/: db.rs  db_fixtures.rs  mod.rs  repository.rs
client/rust/shared/src/domain/: auth.rs  common.rs  facts.rs  lessons.rs  runtime.rs  settings.rs
client/rust/uniffi-bindgen/: Cargo.toml
client/shared/: build.gradle.kts
client/windows/: Cargo.toml  build.rs  lingolessons.exe.manifest  resource.rc
client/windows/src/: main.rs
client/windows/src/ui/: flashcard.rs  mod.rs  tray.rs  window.rs
server/: .envrc  .gitignore  DEVELOPMENT.md  Dockerfile  INSTALLATION.md  default.nix  devenv.nix  docker-compose.yml  docker-delete.sh  docker-entrypoint.sh  docker-rebuild.sh  env.dev  env.dev.db  flake.nix  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  tailwind.sh
server/api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/api/fixtures/: languages.json  lessons.json  users.json
server/api/migrations/: 0001_initial.py  0002_alter_fact_id_alter_lesson_id.py  0003_lesson_is_deleted_lesson_status_alter_fact_id_and_more.py  0004_fact_is_deleted_fact_updated_at.py
server/api/templates/rest_framework/: api.html
server/core/: admin.py  apps.py  models.py  views.py
server/core/templates/: index.html
server/nix/: python.nix
server/server/: asgi.py  settings.py  urls.py  wsgi.py
server/theme/static_src/: package-lock.json
server/theme/templates/: base.html
server/ui/: admin.py  apps.py  forms.py  styles.py  tests.py  urls.py  views.py
server/ui/migrations/: __init__.py
server/ui/templates/: core.html  form.html  home.html  index.html  lesson.html  lesson_new.html  lessons.html  login.html  register.html  study.html
(+213 files in other folders)
