[package]
name = "lingolessons"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
shared = { path = "../rust/shared" }
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
anyhow = "1.0.89"

[build-dependencies]
winresource = "0.1.17"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]

[package.metadata.winresource]
OriginalFilename = "LINGOLESSONS.EXE"
LegalCopyright = "Copyright © 2002-2024 Anthony Miceli"
