[package]
name = "lingolessons"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
shared = { path = "../rust/shared" }
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
anyhow = "1.0.89"
winsafe = { version = "0.0.22", features = ["gui", "shell"] }

[build-dependencies]
embed-resource = "2.5.0"

[package.metadata.winresource]
OriginalFilename = "LINGOLESSONS.EXE"
LegalCopyright = "Copyright © 2002-2024 Anthony Miceli"
