[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compat = "0.2.4"
#async-std = { version = "1", features = ["attributes", "tokio1"] }
#uniffi.workspace = true
serde = "1.0.210"
thiserror = "1.0.64"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = { version = "1.3.0-alpha-without-tokio.1", features = ["from-directory"] }
lazy_static = "1.5.0"
include_dir = { version = "0.7.4" }
concat-string = "1.0.1"
uniffi = { version = "0.28.1", features = ["tokio"] }
env_logger = "0.11.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[build-dependencies]

[lib]
name = "shared"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]
