[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compat = "0.2.4"
serde = "1.0.214"
thiserror = "2.0.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.41.0", features = ["full", "test-util"] }
reqwest = { version = "0.12.9", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled", "uuid"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
lazy_static = "1.5.0"
include_dir = { version = "0.7.4" }
concat-string = "1.0.1"
uniffi = { version = "0.28.2", features = ["tokio"] }
env_logger = "0.11.5"
anyhow = "1.0.93"
serde_json = "1.0.132"
mockito = "1.5.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4.38"
log = "0.4.22"
lru = "0.12.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[build-dependencies]

[lib]
name = "shared"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]
